# duckdb-file-tools

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  EXTENSION_PLAN.md  FUNCTIONS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  NAMED_PARAMETERS_IMPLEMENTATION.md  README.md
.github/workflows/: ci.yml
src/: file_reader.rs  glob_stat.rs  lib.rs  metadata.rs
test_data/: test1.txt
