[package]
name = "duckdb-file-tools"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "High-performance DuckDB extension for file system operations, metadata extraction, and compression"
repository = "https://github.com/yourusername/duckdb-file-tools"
license = "MIT"
keywords = ["duckdb", "file-system", "compression", "metadata", "hash"]
categories = ["database", "filesystem", "compression"]
readme = "README.md"
rust-version = "1.70"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true

[[example]]
# crate-type can't be (at the moment) be overriden for specific targets
# src/wasm_lib.rs forwards to src/lib.rs so that we can change from cdylib
# (that is needed while compiling natively) to staticlib (needed since the
# actual linking will be done via emcc
name = "file_tools"
path = "src/wasm_lib.rs"
crate-type = ["staticlib"]

[dependencies]
duckdb = { version = "1.3.1", features = ["vtab-loadable", "vscalar", "vtab-arrow"] }
duckdb-loadable-macros = "0.1.5"
libduckdb-sys = { version = "1.3.1", features = ["loadable-extension"] }
jwalk = "0.8"
sha2 = "0.10"
glob = "0.3"
rayon = "1.8"
flate2 = "1.0"
lz4_flex = "0.11"
zstd = "0.13"
